Criando novas ideias

--- a/pages/79 32 102 97 110 116 97 115 109 97.html
+++ b/pages/79 32 102 97 110 116 97 115 109 97.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
 
 
             <ul class="subNav">
-                <li><a href="#">Arquivos</a></li>
+                <li><a href="#">Recursos</a></li>
                 <li><a href="#">Informações</a></li>
                 <li><a href="#">Operações</a></li>
                 <li><a href="#">Network</a></li>
@@ -52,7 +52,7 @@
 
         <div class="informacao">
             <p>Abaixo está uma lista "oficial" de onde tenho contas. Futuramente algumas pessoas vão usar o nome de "O Fantasma", então eu tenho outra conta pra quando isso acontecer "The fantasma". Além disso, Em caso de dúvida sobre uma das minhas contas, verifique aqui.</p>
-            <p>Eu uso o LinkedIn <a href="#">Meu linkedin</a> para manter um currículo online básico. Eu passei á não me importar do que falam de mim ou quando me perguntam, eu gosto de ter certeza que conheco você ou pessoalmente antes de aceitar o convite.</p>
+            <p>Eu uso o LinkedIn <a href="#">Meu linkedin</a> para manter um currículo online básico. Eu passei a não me importar do que falam de mim ou quando me perguntam, eu gosto de ter certeza que conheço você, ou pessoalmente, antes de aceitar o convite.</p>
             <p>Últimamente estou tentando não usar o fecabook, e quando uso, é apenas uns 10 minutos, mas se você tiver interesse ver a minha conta pessoal do facebook está aqui. <a href="#">O meu facebook</a></p>
         </div>
    </article>
