--- a/pages/Projeto02/video02/video_02.html
+++ b/pages/Projeto02/video02/video_02.html
@@ -8,7 +8,7 @@
 
     <!-- link -->
     <link rel="stylesheet" href="../../../css/servidor/style.css">
-    <link rel="stylesheet" href="../../../css/projetos/musica_02.css">
+    <link rel="stylesheet" href="../../../css/projetos/musica_01.css">
 
     <!-- Font google -->
     <link rel=" preconnect" href="https://fonts.googleapis.com">
@@ -55,49 +55,47 @@
                         <td class="date">-</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Musicas">D7 Musica - Can´t Get Over</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Musicas">D7 Musica - Because I Love You</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 28 00:59</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Artes">D7 Musica - If You Magic Box</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Artes">D7 Musica - Happy Nation</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 29 01:18</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Alice Deejay</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - All The Things She</a>
-                        </td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Pet Shop Boys </a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Be My Lover</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - The Human League</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - itter Sweet Symphony</a>
-                        </td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
