--- a/pages/Projeto02/music02/music_02.html
+++ b/pages/Projeto02/music02/music_02.html
@@ -7,8 +7,8 @@
     <link rel="shortcut icon" href="../image/logoIrmandade.png" type="image/x-icon">
 
     <!-- link -->
-    <link rel="stylesheet" href="../../css/servidor/style.css">
-    <link rel="stylesheet" href="../../css/projetos/projeto1.css">
+    <link rel="stylesheet" href="../../../css/servidor/style.css">
+    <link rel="stylesheet" href="../../../css/projetos/musica_01.css">
 
     <!-- Font google -->
     <link rel=" preconnect" href="https://fonts.googleapis.com">
@@ -16,7 +16,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Anton&family=Anton+SC&family=Bruno+Ace+SC&family=Geist+Mono:wght@100..900&family=Geo:ital@0;1&family=Iceland&family=Orbitron:wght@400..900&family=Oswald:wght@200..700&family=Permanent+Marker&family=Rubik+Wet+Paint&family=VT323&display=swap"
         rel="stylesheet">
-    <title>Um tesouro de conhecimento</title>
+    <title>A musica é o ritmo do seu corpo</title>
 </head>
 
 <body>
@@ -37,7 +37,7 @@
     </div>
 
     <div class="div-container">
-        <img class="logo" src="../../image/logoIrmandade.png" alt="">
+        <img class="logo" src="../../../image/logoIrmandade.png" alt="">
         <p>"No escuro da tecnologia, a Irmandade das Sombras ilumina o caminho para a inovação."</p>
     </div>
 
@@ -50,35 +50,52 @@
             <table>
                 <tbody>
                     <tr class="const">
-                        <td colspan="2" class="link"><a href="#" title="Arquivos">Diretório pai/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Arquivos">Diretório pia</a></td>
                         <td class="size">-</td>
                         <td class="date">-</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="../src/music/music_01.html" title="Musicas">D7
-                                Musicas/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Musicas">D7 Musica - Freed From Desire</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 28 00:59</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Artes">D7 Videos/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Artes">D7 Musica - NBSPLV Lost Soul</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 29 01:18</td>
                     </tr>
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Artes/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Lady Gaga-Judas </a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">Podcast/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - L'AMOUR TOUJOURS</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
 
                     <tr>
-                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Arquivos/</a></td>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Last Night</a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Last Night</a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Last Night</a></td>
+                        <td class="size">-</td>
+                        <td class="date">2025 Jan 30 04:01</td>
+                    </tr>
+
+                    <tr>
+                        <td colspan="2" class="link"><a href="#" title="Filmes">D7 Musica - Last Night</a></td>
                         <td class="size">-</td>
                         <td class="date">2025 Jan 30 04:01</td>
                     </tr>
@@ -91,12 +108,12 @@
 
     <footer class="container-footer row">
         <div class="div-footer row">
-            <img class="imagem" src="../../image/logoIrmandade.png" alt="Logo da irmandade">
+            <img class="imagem" src="../../../image/logoIrmandade.png" alt="Logo da irmandade">
             <p>&copy; 2024 D7 Comunicação. <a href="#">início</a> | <a href="#">Fóruns</a> | <a href="#">Grupos</a> | <a
                     href="#">Perguntas frequentes</a> | <a href="#">linkedin</a> | <a href="#">Discord</a> | <a
                     href="#">.onion</a>
             </p>
-            <img class="imagem" src="../../image/logoIrmandade.png" alt="Logo da irmandade">
+            <img class="imagem" src="../../../image/logoIrmandade.png" alt="Logo da irmandade">
         </div>
     </footer>
 </body>
